--- a/_layouts/index.liquid
+++ b/_layouts/index.liquid
@@ -5,66 +5,74 @@ layout: base
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-1 vcenter idxHdr">
-      <div style='font-size: 2em; color: #4582ec; font-weight: bold; padding-bottom: 0.3em;'>Guojin Chen 陈国晋</div>
+      <div style='font-size: 2em; color: #4582ec; font-weight: bold; padding-bottom: 0.3em;'>Chunliang Yang 杨淳亮</div>
       {% comment %} <div style='font-size: 1.2em;'>
         Research Assistant
       </div> {% endcomment %}
       <div style='font-size: 1em; margin: 0.3em'>
-        <a href="https://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>
+        <a href="https://engineering.tamu.edu/industrial/index.html/">Wm Michael Barnes '64 Department of Industrial & Systems Engineering</a>
       </div>
       <div style='font-size: 1em'>
-        <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>
+        <a href="https://www.tamu.edu/">Texas A&M University</a>
       </div>
       {% comment %} <div style='font-size: 1.2em'>
-        <a href="mailto:cgjhaha@qq.com">cgjhaha@qq.com</a>
+        <a href="mailto:chunliangyang@tamu.edu">chunliangyang@tamu.edu</a>
       </div> {% endcomment %}
       <br/>
 
       <ul class="list-inline idxIcons" style='font-size: 1.3em;'>
         <li>
-          <a href="https://github.com/dekura" target="_blank" style='text-decoration: none;'>
+          <a href="https://github.com/ChunliangYang" target="_blank" style='text-decoration: none;'>
             <i class="iconfont icon-github" style='font-size: 0.9em;'></i></a>
         </li>
+
+    #    <li>
+    #      <a href="https://scholar.google.com/citations?user=842nSvkAAAAJ" target="_blank" style='text-decoration: none;'>
+    #        <i class="iconfont icon-Googlescholar" style='font-size: 0.8em;'></i></a>
+    #    </li>
+
         <li>
-          <a href="https://scholar.google.com/citations?user=842nSvkAAAAJ" target="_blank" style='text-decoration: none;'>
-            <i class="iconfont icon-Googlescholar" style='font-size: 0.8em;'></i></a>
-        </li>
-        <li>
-          <a href="mailto:cgjhaha@qq.com" target="_blank" style='text-decoration: none;'>
+          <a href="mailto:chunliangyang@tamu.edu" target="_blank" style='text-decoration: none;'>
             <i class="iconfont icon-email" style='font-size: 1em;'></i></a>
         </li>
-        {% comment %} <li>
-          <a href="https://twitter.com/dekura11" target="_blank" style='text-decoration: none;'>
-            <i class="iconfont icon-twitter" style='font-size: 1em;'></i></a>
-        </li> {% endcomment %}
-        {% comment %} <li>
-          <a href="https://scholar.google.com/citations?user=d8gdZR4AAAAJ" target="_blank">
-          <i class="ai ai-google-scholar"></i></a>
-        </li> {% endcomment %}
-        {% comment %} <li>
-          <a href="https://www.zhihu.com/people/chenmo1996" target="_blank">
-            <i class="iconfont icon-quora"></i></a>
-        </li> {% endcomment %}
+
+      #  {% comment %} <li>
+      #    <a href="https://twitter.com/dekura11" target="_blank" style='text-decoration: none;'>
+      #      <i class="iconfont icon-twitter" style='font-size: 1em;'></i></a>
+    #    </li> {% endcomment %}
+
+    #    {% comment %} <li>
+    #      <a href="https://scholar.google.com/citations?user=d8gdZR4AAAAJ" target="_blank">
+    #      <i class="ai ai-google-scholar"></i></a>
+    #    </li> {% endcomment %}
+    #    {% comment %} <li>
+    #      <a href="https://www.zhihu.com/people/chenmo1996" target="_blank">
+    #        <i class="iconfont icon-quora"></i></a>
+  #      </li> {% endcomment %}
+
+#        <li>
+#            <a href="https://www.instagram.com/dekura_chan/" target="_blank" style='text-decoration: none;'>
+#            <i class="iconfont icon-instagram" style='font-size: 0.9em;'></i></a>
+#        </li>
+
+#        {% comment %} <li>
+#            <a href="https://weibo.com/u/5230877515" target="_blank" style='text-decoration: none;'>
+#            <i class="iconfont icon-weibo" style='font-size: 0.9em;'></i></a>
+#        </li> {% endcomment %}
+
         <li>
-            <a href="https://www.instagram.com/dekura_chan/" target="_blank" style='text-decoration: none;'>
-            <i class="iconfont icon-instagram" style='font-size: 0.9em;'></i></a>
-        </li>
-        {% comment %} <li>
-            <a href="https://weibo.com/u/5230877515" target="_blank" style='text-decoration: none;'>
-            <i class="iconfont icon-weibo" style='font-size: 0.9em;'></i></a>
-        </li> {% endcomment %}
-        <li>
-          <a href="https://www.linkedin.com/in/dekura/" target="_blank" style='text-decoration: none;'>
+          <a href="https://www.linkedin.com/in/chunliangyang/" target="_blank" style='text-decoration: none;'>
             <i class="iconfont icon-linkedin" style='font-size: 0.8em;'></i></a>
         </li>
-        <li>
-          <a href="/meet/" target="_blank" style='text-decoration: none;'>
-            <i class="iconfont icon-calendar" style='font-size: 0.9em;'></i></a>
-        </li>
-        {% comment %} <li>
-          <a href="https://plus.google.com/u/0/115841186832775748898" target="_blank">
-            <i class="iconfont icon-google-plus"></i></a>
-        </li> {% endcomment %}
+
+  #      <li>
+  #        <a href="/meet/" target="_blank" style='text-decoration: none;'>
+  #          <i class="iconfont icon-calendar" style='font-size: 0.9em;'></i></a>
+  #      </li>
+  #      {% comment %} <li>
+  #        <a href="https://plus.google.com/u/0/115841186832775748898" target="_blank">
+#            <i class="iconfont icon-google-plus"></i></a>
+#        </li> {% endcomment %}
         <li>
           <a href="/atom.xml" target="_blank" style='text-decoration: none;'>
             <i class="iconfont icon-rss" style='font-size: 0.9em;'></i></a>
@@ -75,7 +83,7 @@ layout: base
         <a href="data/cv.pdf" target='_blank' style='text-decoration: none;'>
           <i style='color: white' class="iconfont icon-clouddownload"></i>
         </a>
-        {% comment %} <a href="https://github.com/dekura/cv" target='_blank' style='text-decoration: none;'>
+        {% comment %} <a href="https://github.com/chunliangyang/cv" target='_blank' style='text-decoration: none;'>
           <i style='color: white' class="fa fa-code-fork"></i>
         </a> {% endcomment %}
         <a href="data/cv.pdf" target='_blank' style='color: white; text-decoration: none;'>CV</a>
@@ -93,7 +101,7 @@ layout: base
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
     <blockquote>
-        Anything one man can imagine, other men can make real.
+        Hofstadter’s Law means it is always takes longer than you expect, even when you take into account Hofstadter’s Law.
     </blockquote>
     </div>
     <div class="col-md-10 col-md-offset-1">
@@ -101,4 +109,3 @@ layout: base
     </div>
   </div>
 </div>
-
