--- a/_layouts/index.liquid
+++ b/_layouts/index.liquid
@@ -26,39 +26,43 @@ layout: base
             <i class="iconfont icon-github" style='font-size: 0.9em;'></i></a>
         </li>
 
-    #    <li>
-    #      <a href="https://scholar.google.com/citations?user=842nSvkAAAAJ" target="_blank" style='text-decoration: none;'>
-    #        <i class="iconfont icon-Googlescholar" style='font-size: 0.8em;'></i></a>
-    #    </li>
+{% comment %}
+       <li>
+         <a href="https://scholar.google.com/citations?user=842nSvkAAAAJ" target="_blank" style='text-decoration: none;'>
+           <i class="iconfont icon-Googlescholar" style='font-size: 0.8em;'></i></a>
+       </li>
+{% endcomment %}
 
         <li>
           <a href="mailto:chunliangyang@tamu.edu" target="_blank" style='text-decoration: none;'>
             <i class="iconfont icon-email" style='font-size: 1em;'></i></a>
         </li>
 
-      #  {% comment %} <li>
-      #    <a href="https://twitter.com/dekura11" target="_blank" style='text-decoration: none;'>
-      #      <i class="iconfont icon-twitter" style='font-size: 1em;'></i></a>
-    #    </li> {% endcomment %}
+        {% comment %} <li>
+         <a href="https://twitter.com/dekura11" target="_blank" style='text-decoration: none;'>
+            <i class="iconfont icon-twitter" style='font-size: 1em;'></i></a>
+        </li> {% endcomment %}
 
-    #    {% comment %} <li>
-    #      <a href="https://scholar.google.com/citations?user=d8gdZR4AAAAJ" target="_blank">
-    #      <i class="ai ai-google-scholar"></i></a>
-    #    </li> {% endcomment %}
-    #    {% comment %} <li>
-    #      <a href="https://www.zhihu.com/people/chenmo1996" target="_blank">
-    #        <i class="iconfont icon-quora"></i></a>
-  #      </li> {% endcomment %}
+        {% comment %} <li>
+          <a href="https://scholar.google.com/citations?user=d8gdZR4AAAAJ" target="_blank">
+          <i class="ai ai-google-scholar"></i></a>
+       </li> {% endcomment %}
+       {% comment %} <li>
+          <a href="https://www.zhihu.com/people/chenmo1996" target="_blank">
+            <i class="iconfont icon-quora"></i></a>
+       </li> {% endcomment %}
 
-#        <li>
-#            <a href="https://www.instagram.com/dekura_chan/" target="_blank" style='text-decoration: none;'>
-#            <i class="iconfont icon-instagram" style='font-size: 0.9em;'></i></a>
-#        </li>
+  {% comment %}
+      <li>
+            <a href="https://www.instagram.com/dekura_chan/" target="_blank" style='text-decoration: none;'>
+           <i class="iconfont icon-instagram" style='font-size: 0.9em;'></i></a>
+       </li>
+       {% endcomment %}
 
-#        {% comment %} <li>
-#            <a href="https://weibo.com/u/5230877515" target="_blank" style='text-decoration: none;'>
-#            <i class="iconfont icon-weibo" style='font-size: 0.9em;'></i></a>
-#        </li> {% endcomment %}
+        {% comment %} <li>
+           <a href="https://weibo.com/u/5230877515" target="_blank" style='text-decoration: none;'>
+            <i class="iconfont icon-weibo" style='font-size: 0.9em;'></i></a>
+        </li> {% endcomment %}
 
         <li>
           <a href="https://www.linkedin.com/in/chunliangyang/" target="_blank" style='text-decoration: none;'>
