--- a/_layouts/index.liquid
+++ b/_layouts/index.liquid
@@ -69,14 +69,17 @@ layout: base
             <i class="iconfont icon-linkedin" style='font-size: 0.8em;'></i></a>
         </li>
 
-  #      <li>
-  #        <a href="/meet/" target="_blank" style='text-decoration: none;'>
-  #          <i class="iconfont icon-calendar" style='font-size: 0.9em;'></i></a>
-  #      </li>
-  #      {% comment %} <li>
-  #        <a href="https://plus.google.com/u/0/115841186832775748898" target="_blank">
-#            <i class="iconfont icon-google-plus"></i></a>
-#        </li> {% endcomment %}
+{% comment %}
+        <li>
+         <a href="/meet/" target="_blank" style='text-decoration: none;'>
+            <i class="iconfont icon-calendar" style='font-size: 0.9em;'></i></a>
+        </li>
+{% endcomment %}
+
+        {% comment %} <li>
+          <a href="https://plus.google.com/u/0/115841186832775748898" target="_blank">
+          <i class="iconfont icon-google-plus"></i></a>
+        </li> {% endcomment %}
         <li>
           <a href="/atom.xml" target="_blank" style='text-decoration: none;'>
             <i class="iconfont icon-rss" style='font-size: 0.9em;'></i></a>
