--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -29,7 +29,7 @@
 						  <a href="/" class="navbar-brand">
                   <div>
                       <img src="/images/me_face.jpg" class="img-circle"></img>
-                      <strong>Guojin Chen</strong>
+                      <strong>Chunliang Yang</strong>
                   </div>
               </a>
 						<button class="navbar-toggle" type="button" data-toggle="collapse"
@@ -50,7 +50,7 @@
 						</ul>
 						<ul class="nav navbar-nav navbar-right" style="font-size: 1.5em">
 							<li>
-								<a href="http://github.com/dekura" target="_blank">
+								<a href="http://github.com/chunliangyang" target="_blank">
 									<i class="iconfont icon-github" style="font-size: 1em"></i>
                                 </a>
 							</li>
